feat: add accounts swagger
